tests/ui/resolve/resolve-bad-import-prefix.stderr
error[E0432]: unresolved import `crate::Nonexistent`
  --> $DIR/resolve-bad-import-prefix.rs:12:5
   |
LL | use crate::Nonexistent::{};
   |     ^^^^^^^^^^^^^^^^^^^^^^ no `Nonexistent` in the root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
